# webapps

./: .gitattributes  .gitignore  CONTEXT.md  LICENSES.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
.claude/commands/: commit-push.md
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy-pages.yml  release.yml
apps/browserqc/: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/calmar/: .gitattributes  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.js
apps/deface/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/dicom2vid/: .gitignore  MRI2vid.py  README.md  (+2 more)
apps/qsmbly/rust-wasm/: Cargo.toml
apps/qsmbly/rust-wasm/src/: lib.rs
models/: README.md  browserqc.manifest.json  calmar.manifest.json  deface.manifest.json  musclemap.manifest.json  niimath.manifest.json  qsmbly.manifest.json  seedseg.manifest.json  spinalcordtoolbox.manifest.json  vesselboost.manifest.json
registry/: apps.yml
runtime-assets/: manifest.json
scripts/: app-plan.mjs  audit-artifacts.mjs  build-site.mjs  build-static.mjs  check-app-js.mjs  check-syntax.mjs  new-app.mjs  test-showcase-browser.mjs  vendor-components.mjs  vendor-runtime-support.mjs
test/: app-plan.test.mjs  composite-site.smoke.mjs  deployed-site.smoke.mjs  file-io.test.js  navigation.test.mjs  registry.test.mjs  runtime-assets.test.mjs
test-utils/: playwright-static-app.mjs  shared-runtime-smoke.mjs  ui-parity.mjs
(+692 files in other folders)
