[package]
name = "qsm_wasm"
version = "0.18.0"
edition = "2021"
authors = ["QSM-WASM"]
description = "WASM bindings for QSM processing pipeline (powered by qsm-core)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
simd = ["qsm-core/simd"]

[dependencies]
# Core QSM algorithms. No `parallel` feature — WASM is single-threaded.
qsm-core = { git = "https://github.com/astewartau/QSM.rs.git", tag = "v0.16.0" }

# Pipeline configuration, command generation, methods text.
# qsmxt-config's canonical home is the QSMxT/QSMxT workspace (the old
# astewartau/qsmxt.rs repo is being retired).
qsmxt-config = { git = "https://github.com/QSMxT/QSMxT.git", tag = "v9.3.0" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
